Java 17 compatability